--- a/templates/index.html
+++ b/templates/index.html
@@ -30,4 +30,9 @@
     <a href="{{ url_for('letnji_kurs') }}" class="button">Prijavi se za letnji kurs</a>
   </div>
 </body>
+  <footer>
+    <a href="/admin?lozinka=mentoralozinka" style="display: none;">Admin</a>
+  </footer>
+
+  
 </html>
